# tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: conversation.rs  events_parser.rs  lib.rs  markdown.rs  scroll.rs  theme.rs
