[package]
name = "apiari-tui"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Shared TUI design system for Apiari tools — theme, scroll, and common widgets"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3"
