[package]
name = "apiari-tui"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Shared TUI design system for Apiari tools — theme, scroll, and common widgets"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3"
